--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:showIn="@layout/activity_main"
+        tools:context=".controller.MainActivity"/>
+
+    <TextView
+        android:id="@+id/main_disconnected"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/internet"
+        android:textStyle="bold"
+        android:textSize="30sp"/>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
