--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,13 +10,13 @@
     tools:context=".DetailsActivity">
 
     <ImageView
-        android:id="@+id/act_detail_user_image_header"
+        android:id="@+id/details_user_avatar_imageView"
         android:layout_width="match_parent"
         android:layout_height="310dp"
         android:fitsSystemWindows="true"
         android:scaleType="fitXY"/>
     <TextView
-        android:id="@+id/act_detail_header_tv"
+        android:id="@+id/detail_username_title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/username"
@@ -24,19 +24,19 @@
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:layout_below="@+id/act_detail_user_image_header"
-        android:gravity="center_horizontal"/>
+        android:layout_below="@+id/details_user_avatar_imageView"
+        android:gravity="center_horizontal" />
     <TextView
-        android:id="@+id/act_detail_username_tv"
+        android:id="@+id/details_username_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:layout_below="@id/act_detail_header_tv"
+        android:layout_below="@id/detail_username_title_tv"
         android:gravity="center_horizontal" />
     <TextView
-        android:id="@+id/act_detail_githubLink_tv"
+        android:id="@+id/details_githubLink_title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/github_profile_link"
@@ -45,15 +45,15 @@
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:layout_below="@id/act_detail_username_tv"/>
+        android:layout_below="@id/details_username_tv"/>
     <TextView
-        android:id="@+id/act_detail_link_tv"
+        android:id="@+id/details_link_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:layout_below="@id/act_detail_githubLink_tv"
+        android:layout_below="@id/details_githubLink_title_tv"
         android:gravity="center_horizontal" />
 
 </RelativeLayout>
