--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    tools:context=".DetailsActivity">
+    tools:context=".controller.DetailsActivity">
 
     <ImageView
         android:id="@+id/details_user_avatar_imageView"
