--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -36,12 +36,14 @@
             android:text="Nome do Repositorio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/act_row_description_tv"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             android:layout_marginTop="8dp"
             android:text="Descricao do repositorio bla bla bla bla bla bla bla bla"
+            app:layout_constraintEnd_toStartOf="@+id/act_row_userAvatar_imageView"
             app:layout_constraintStart_toStartOf="@+id/act_row_repository_name_tv"
             app:layout_constraintTop_toBottomOf="@+id/act_row_repository_name_tv" />
         <ImageView
@@ -82,6 +84,7 @@
             android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/act_row_stars_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_stars_icon" />
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/act_row_userAvatar_imageView"
             android:layout_width="46dp"
@@ -90,14 +93,15 @@
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/act_row_description_tv"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/act_row_description_tv"
             app:layout_constraintTop_toTopOf="@+id/act_row_repository_name_tv" />
+
         <TextView
             android:id="@+id/act_row_userLogin_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Mara"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/act_row_userAvatar_imageView"
             app:layout_constraintTop_toBottomOf="@+id/act_row_userAvatar_imageView" />
 
