--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -5,12 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="16dp"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:foreground="?attr/selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +20,8 @@
             android:id="@+id/act_row_githubLink_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:text="Github Link"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
@@ -30,8 +31,10 @@
 
         <TextView
             android:id="@+id/act_row_repository_name_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="Nome do Repositorio"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,19 +42,24 @@
 
         <TextView
             android:id="@+id/act_row_description_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:text="Descricao do repositorio bla bla bla bla bla bla bla bla"
             app:layout_constraintEnd_toStartOf="@+id/act_row_userAvatar_imageView"
-            app:layout_constraintStart_toStartOf="@+id/act_row_repository_name_tv"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/act_row_repository_name_tv" />
+
         <ImageView
             android:id="@+id/act_row_fork_icon"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@+id/act_row_description_tv"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/act_row_description_tv"
             app:srcCompat="?attr/actionModeShareDrawable" />
         <TextView
