--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    tools:context=".controller.DetailsActivity">
+    android:layout_marginEnd="16dp">
 
     <ImageView
         android:id="@+id/details_user_avatar_imageView"
