--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -18,16 +18,14 @@
 
         <TextView
             android:id="@+id/act_row_githubLink_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:text="Github Link"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/act_row_forkTotal_tv" />
 
         <TextView
             android:id="@+id/act_row_repository_name_tv"
@@ -35,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="80dp"
             android:text="Nome do Repositorio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +46,6 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:text="Descricao do repositorio bla bla bla bla bla bla bla bla"
-            app:layout_constraintEnd_toStartOf="@+id/act_row_userAvatar_imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/act_row_repository_name_tv" />
 
@@ -82,36 +79,34 @@
             app:layout_constraintTop_toTopOf="@+id/act_row_forkTotal_tv"
             app:srcCompat="@drawable/ic_star"
             tools:ignore="VectorDrawableCompat" />
+
         <TextView
             android:id="@+id/act_row_starsTotal_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginLeft="2dp"
             android:text="350"
             android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/act_row_stars_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_stars_icon" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/act_row_userAvatar_imageView"
-            android:layout_width="46dp"
-            android:layout_height="52dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/act_row_description_tv"
+            android:layout_width="131dp"
+            android:layout_height="68dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/act_row_repository_name_tv" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/act_row_userLogin_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Mara"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/act_row_userAvatar_imageView"
-            app:layout_constraintTop_toBottomOf="@+id/act_row_userAvatar_imageView" />
+            app:layout_constraintEnd_toStartOf="@+id/act_row_userAvatar_imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
