--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,58 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/details_user_avatar_imageView"
-        android:layout_width="match_parent"
-        android:layout_height="310dp"
-        android:fitsSystemWindows="true"
-        android:scaleType="fitXY"/>
-    <TextView
-        android:id="@+id/detail_username_title_tv"
-        android:layout_width="match_parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pull_recyclerView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_below="@+id/details_user_avatar_imageView"
-        android:gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/details_username_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:layout_below="@id/detail_username_title_tv"
-        android:gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/details_githubLink_title_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/github_profile_link"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_below="@id/details_username_tv"/>
-    <TextView
-        android:id="@+id/details_link_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:layout_below="@id/details_githubLink_title_tv"
-        android:gravity="center_horizontal" />
-
-</RelativeLayout>
+        tools:listitem="@layout/row_pull_resquest"/>
+</LinearLayout>
