--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/swipeContainer"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,12 +14,4 @@
         tools:showIn="@layout/activity_main"
         tools:context=".ui.main.MainActivity"/>
 
-    <TextView
-        android:id="@+id/main_disconnected"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/whithout_connection"
-        android:textStyle="bold"
-        android:textSize="30sp"/>
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</LinearLayout>
