--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#fd7e14</color>
     <color name="colorPrimaryDark">#fd7e14</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="orangeItau">#fd7e14</color>
 </resources>
