--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -8,6 +8,6 @@
     android:background="@color/orangeItau"
     android:minHeight="?actionBarSize"
     app:theme="@style/ToolbarTheme"
-    >
+    android:layout_gravity="center_horizontal">
 
 </androidx.appcompat.widget.Toolbar>
