update strings resources

--- a/app/src/main/res/layout/lista_pull_resquest.xml
+++ b/app/src/main/res/layout/lista_pull_resquest.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="Nome do PullRequest"
+            android:text="@string/nome_do_pullrequest"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:text="Descricao do pull request bla bla bla bla bla bla bla bla"
+            android:text="@string/pullresquest_description"
             android:textSize="9sp"
             app:layout_constraintEnd_toEndOf="@+id/act_rowPull_pr_title_tv"
             app:layout_constraintStart_toStartOf="@+id/act_rowPull_pr_title_tv"
@@ -58,7 +58,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="16dp"
-            android:text="Mara"
+            android:text="@string/username"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/act_rowPull_userAvatar_imageView"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="12/12/2020"
+            android:text="@string/date"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
