--- a/app/src/main/res/layout/list_javarepo.xml
+++ b/app/src/main/res/layout/list_javarepo.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:text="Nome do Repositorio"
+            android:text="@string/nome_do_repositorio"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:text="Descricao do repositorio bla bla bla bla bla bla bla bla"
+            android:text="@string/description"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/act_rowPull_pr_title_tv" />
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:text="1974"
+            android:text="@string/total_forks"
             android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/act_row_fork_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_fork_icon" />
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginLeft="2dp"
-            android:text="350"
+            android:text="@string/starts_total"
             android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/act_row_stars_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_stars_icon" />
@@ -109,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
-            android:text="Mara"
+            android:text="@string/username"
             android:textSize="28dp"
             app:layout_constraintBottom_toBottomOf="@+id/act_rowPull_userAvatar_imageView"
             app:layout_constraintEnd_toStartOf="@+id/act_rowPull_userAvatar_imageView"
