--- a/app/src/main/res/layout/list_javarepo.xml
+++ b/app/src/main/res/layout/list_javarepo.xml
@@ -17,16 +17,6 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/act_row_githubLink_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Github Link"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/act_row_forkTotal_tv" />
-
-        <TextView
             android:id="@+id/act_rowPull_pr_title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -58,25 +48,33 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/act_rowPull_descriptionPR_tv"
             app:srcCompat="?attr/actionModeShareDrawable" />
+
         <TextView
             android:id="@+id/act_row_forkTotal_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/total_forks"
             android:textSize="18dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/act_row_fork_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_fork_icon" />
+
         <ImageView
             android:id="@+id/act_row_stars_icon"
             android:layout_width="28dp"
             android:layout_height="26dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/act_row_forkTotal_tv"
             app:layout_constraintTop_toTopOf="@+id/act_row_forkTotal_tv"
             app:srcCompat="@drawable/ic_star"
@@ -88,8 +86,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginLeft="2dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/starts_total"
             android:textSize="18dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/act_row_stars_icon"
             app:layout_constraintTop_toTopOf="@+id/act_row_stars_icon" />
 
